--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 30vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
@@ -13,4 +13,5 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  margin: 2rem;
 }
